@@ -12,6 +12,7 @@
             Bangle.js: Add support for global colour themes which affect g.clear/g.reset (fix #499)
             Bangle.js: Switch beep/buzz to IRQs (keeps time correct even when JS is busy)
             Add E.decodeUTF8 to allow UTF8 to be decoded into standard 8 bit characters
+            Util timer: account for 'drift' in timer when adding new tasks if running it continuously
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
